--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/git?charset=utf8&useSSl=true&a
 spring.datasource.username=root
 spring.datasource.password=root
 logging.level.root=info
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
+file.upload-dir=/Users/apple/gis/uploads
