--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8089
-spring.datasource.url=jdbc:mysql://localhost:3306/git?charset=utf8&useSSl=true&autoReconnect=true&characterEncoding=utf8
+server.port=8318
+spring.datasource.url=jdbc:mysql://localhost:3306/gis?charset=utf8&useSSl=true&autoReconnect=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root
 logging.level.root=info
